# vkraytracing

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
assets/: CMakeLists.txt
shaders/: shader.slang
src/: CMakeLists.txt  RayTracer.cpp  RayTracer.hpp  main.cpp
src/Base/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  BufferUtil.hpp  CommandBuffers.cpp  CommandBuffers.hpp  CommandPool.cpp  CommandPool.hpp  DebugUtils.cpp  DebugUtils.hpp  DebugUtilsMessenger.cpp  DebugUtilsMessenger.hpp  DepthBuffer.cpp  DepthBuffer.hpp  DescriptorBinding.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorSetManager.cpp  DescriptorSetManager.hpp  DescriptorSets.cpp  DescriptorSets.hpp  Device.cpp  Device.hpp  DeviceMemory.cpp  DeviceMemory.hpp  DeviceProcedures.cpp  DeviceProcedures.hpp  Enumerate.hpp  Fence.cpp  Fence.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  ImageMemoryBarrier.hpp  (+31 more)
src/RayTrace/: AccelerationStructure.cpp  AccelerationStructure.hpp  Application.cpp  Application.hpp  BottomLevelAccelerationStructure.cpp  BottomLevelAccelerationStructure.hpp  BottomLevelGeometry.cpp  BottomLevelGeometry.hpp  CornellBox.cpp  CornellBox.hpp  Material.hpp  Model.cpp  Model.hpp  Procedural.hpp  RayTracingPipeline.cpp  RayTracingPipeline.hpp  RayTracingProperties.cpp  RayTracingProperties.hpp  ShaderBindingTable.cpp  ShaderBindingTable.hpp  Sphere.hpp  Texture.cpp  Texture.hpp  TopLevelAccelerationStructure.cpp  TopLevelAccelerationStructure.hpp  Vertex.hpp
src/Utils/: Console.cpp  Console.hpp  Glm.hpp  Macros.cpp  Macros.hpp  ModelViewController.cpp  ModelViewController.hpp  Options.cpp  Options.hpp  SceneList.cpp  SceneList.hpp  StbImage.cpp  StbImage.hpp  UserInterface.cpp  UserInterface.hpp  UserSettings.hpp
